[metadata]
# replace with your username:
name = cloudfrontDist_limitMonitor
version = 0.0.1
author = Felipe Gomes Madeiros
author_email = felipemadeiros@gmail.com
description = Check how many CloudFront Distribution are deployed in the AWS account
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felipemadeiros/aws_cloudfrontDistLimitMonitor
project_urls =
    Bug Tracker = https://github.com/felipemadeiros/aws_cloudfrontDistLimitMonitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src